Opened 8 years ago

Closed 8 years ago

#13043 closed bug (fixed)

Cookies Not Enabled Error in Webpositive

Reported by: vidrep Owned by: pulkomandy
Priority: normal Milestone: Unscheduled
Component: Applications/WebPositive Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev50634 x86_gcc2 Going to the following URL brings up the error message:https://easyweb.td.com/waw/idp/login.htm?mode=resume Screenshot1.png attached

Attachments (1)

screenshot1.png (119.5 KB ) - added by vidrep 8 years ago.

Download all attachments as: .zip

Change History (3)

by vidrep, 8 years ago

Attachment: screenshot1.png added

comment:1 by vidrep, 8 years ago

Please change the URL in the description to the following: https://easyweb.td.com/waw/idp/login.htm?execution=e1s1 I have verified with hrev50623 x86_gcc2 that this URL works correctly. After doing a pkgman update to hrev50635 it redirects to the previous URL - which show the cookies not enabled error message.

comment:2 by pulkomandy, 8 years ago

Resolution: fixed
Status: newclosed

Mh… These guys surely know how to mess up expiration dates in cookies!

Set-Cookie: TD-persist=BDC;expires=Mon, 31-Oct-2016 08:08:40 GMT;path=/;

31 oct is a sunday in this part of the world.

Set-Cookie: sitecontext=58fdf13f-cc86-4e6d-af44-3676834fdf99; Expires=Tue, 19-Oct-66 07:08:40 GMT; Path=/; Domain=.td.com; Secure
Set-Cookie: BID=dd0233c2-5fa5-473d-af30-486a7659e47d-2354188815; Expires=Sat, 21-Oct-56 07:08:40 GMT; Path=/waw/idp; Domain=td.com; Secure

Using 2-digit year is not a good idea, but is allowed by the HTTP spec. We parse those as year 56 and 66 B.C., where it should be 2056 and 2066.

Anyway, fixed in hrev50636.

Note: See TracTickets for help on using tickets.