HttpDate: fix parsing of 2-digit year dates.

Fixes #13043.
Added the affected cookies to the testsuite to avoid future regressions.